--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="./assets/favicon.ico" />
-    <title>multicall UI</title>
+    <title>near-multicall</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
