--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="./assets/favicon.ico" />
+    <link rel="stylesheet" href="./global.scss">
     <title>near-multicall</title>
   </head>
   <body>
