--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><link rel="stylesheet" href="/index.12554786.css">
     <meta charset="utf-8">
-    <link rel="icon" href="/favicon.df682a99.ico">
+    <link rel="icon" href="/favicon.277a906c.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="/favicon.df682a99.ico">
+    <link rel="apple-touch-icon" href="/favicon.277a906c.ico">
     <title>near-multicall</title>
-  <link rel="stylesheet" href="/src.e31bb0bc.css"></head>
+  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
@@ -22,6 +22,6 @@
 
       Hello :)
     -->
-    <script src="/src.e31bb0bc.js"></script>
+    <script src="/index.975ef6c8.js" defer=""></script>
   </body>
 </html>
