--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head><link rel="stylesheet" href="/index.12554786.css">
-    <meta charset="utf-8">
-    <link rel="icon" href="/favicon.277a906c.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="/favicon.277a906c.ico">
-    <title>near-multicall</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-
-      Hello :)
-    -->
-    <script src="/index.975ef6c8.js" defer=""></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="index.8144c30f.css"><meta charset="utf-8"><link rel="icon" href="favicon.fbaafc31.ico"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="apple-touch-icon" href="favicon.fbaafc31.ico"><title>near-multicall</title></head><body> <noscript>You need to enable JavaScript to run this app.</noscript> <div id="root"></div>  <script type="module" src="index.57db21b5.js"></script><script src="index.b77489a1.js" nomodule="" defer></script> </body></html>
