--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,6 @@
 
       Hello :)
     -->
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
