--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="title" content="Near-multicall - on-chain governance without limits">
-    <meta name="description" content="A tool for DAOs to create & execute any number of actions in one single proposal">
+    <meta name="title" content="Near-multicall - on-chain governance without limits" />
+    <meta name="description" content="A tool for DAOs to create & execute any number of actions in one single proposal" />
+    <link rel="canonical" href="https://multicall.app" />
     <link rel="icon" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="./assets/favicon.ico" />
