--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="title" content="Near-multicall - on-chain governance without limits" />
-    <meta name="description" content="A tool for DAOs to create & execute any number of actions in one single proposal" />
-    <link rel="canonical" href="https://multicall.app" />
-    <link rel="icon" href="./assets/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" href="./assets/favicon.ico" />
-    <link rel="stylesheet" href="./global.scss">
-    <title>near-multicall</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+    <head>
+        <meta charset="utf-8" />
+        <meta
+            name="title"
+            content="Near-multicall - on-chain governance without limits"
+        />
+        <meta
+            name="description"
+            content="A tool for DAOs to create & execute any number of actions in one single proposal"
+        />
+        <link
+            rel="canonical"
+            href="https://multicall.app"
+        />
+        <link
+            rel="icon"
+            href="./assets/favicon.ico"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1"
+        />
+        <link
+            rel="apple-touch-icon"
+            href="./assets/favicon.ico"
+        />
+        <link
+            rel="stylesheet"
+            href="./global.scss"
+        />
+        <title>near-multicall</title>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+        <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -26,6 +47,9 @@
 
       Hello :)
     -->
-    <script type="module" src="./index.js"></script>
-  </body>
+        <script
+            type="module"
+            src="./index.js"
+        ></script>
+    </body>
 </html>
