--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     -->
         <script
             type="module"
-            src="./index.js"
+            src="./index.jsx"
         ></script>
     </body>
 </html>
