--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <title>near-multicall</title>
         <meta
             name="title"
             content="Near-multicall - on-chain governance without limits"
@@ -30,26 +31,11 @@
             rel="stylesheet"
             href="./global.scss"
         />
-        <title>near-multicall</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-
-      Hello :)
-    -->
-        <script
-            type="module"
-            src="./index.tsx"
-        ></script>
+        <!-- Hello, NEAR :) -->
+        <script type="module" src="./index.tsx" />
     </body>
 </html>
