wip: Place assets according to scopes

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         />
         <link
             rel="icon"
-            href="./assets/favicon.ico"
+            href="./app/static/favicon.ico"
         />
         <meta
             name="viewport"
@@ -25,7 +25,7 @@
         />
         <link
             rel="apple-touch-icon"
-            href="./assets/favicon.ico"
+            href="./app/static/favicon.ico"
         />
         <link
             rel="stylesheet"
