--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,6 @@
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
         <!-- Hello, NEAR :) -->
-        <script type="module" src="./index.tsx" />
+        <script type="module" src="./index.tsx"></script>
     </body>
 </html>
