--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,42 @@
+<!-- To use swap with index.html and invalidate web cache -->
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>near-multicall</title>
-        <meta
-            name="title"
-            content="Near-multicall - on-chain governance without limits"
-        />
-        <meta
-            name="description"
-            content="A tool for DAOs to create & execute any number of actions in one single proposal"
-        />
-        <link
-            rel="canonical"
-            href="https://multicall.app"
-        />
-        <link
-            rel="icon"
-            href="./app/static/favicon.ico"
-        />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1"
-        />
-        <link
-            rel="apple-touch-icon"
-            href="./app/static/favicon.ico"
-        />
-        <link
-            rel="stylesheet"
-            href="./global.scss"
-        />
-    </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-        <!-- Hello, NEAR :) -->
-        <script type="module" src="./index.tsx"></script>
-    </body>
-</html>
+<title>Site Maintenance</title>
+<style>
+  body {
+    text-align: center;
+    padding: 20px;
+  }
+
+  @media (min-width: 768px) {
+    body {
+      padding-top: 150px;
+    }
+  }
+
+  h1 {
+    font-size: 50px;
+  }
+
+  body {
+    font: 20px Helvetica, sans-serif;
+    color: #333;
+  }
+
+  article {
+    display: block;
+    text-align: left;
+    max-width: 650px;
+    margin: 0 auto;
+  }
+</style>
+
+<article>
+  <h1>We&rsquo;ll be back soon!</h1>
+  <div>
+    <p>
+      Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment.We&rsquo;ll be back online
+      shortly!
+    </p>
+    <p>&mdash; The Near-multicall Team</p>
+  </div>
+</article>
